@@ -1,3 +1,8 @@
+2002-03-25  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSTask.m: GSCheckTasks() return NO under MINGW -
+	temporary hack to avoid busy wait in run loop.
+
 2002-03-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* SSL/GNUmakefile: Remove -lobjc and -lgnustep-base from bundle
